--- a/download-deploy.yaml
+++ b/download-deploy.yaml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: Download the war file
-      shell: 'curl -u admin:admin -L "http://100.26.173.122:8081/service/rest/v1/search/assets/download?sort=version&repository=MyLab-RELEASE&maven.groupId=com.mylab&maven.artifactId=MyLab&maven.extension=war" -H "accept: application/json" --output /home/ansibleadmin/latest.war'
+      shell: 'curl -u admin:admin -L "http://54.84.10.93:8081/service/rest/v1/search/assets/download?sort=version&repository=MyLab-RELEASE&maven.groupId=com.mylab&maven.artifactId=MyLab&maven.extension=war" -H "accept: application/json" --output /home/ansibleadmin/latest.war'
       args:
         chdir: /home/ansibleadmin
 
@@ -14,7 +14,7 @@
         dest: /home/ansibleadmin/Dockerfile
         content: |
                 FROM tomcat:latest
-                LABEL Author: "Minhung"
+                LABEL Author: "PhucTu"
                 ADD ./latest.war /usr/local/tomcat/webapps
                 RUN chmod +x $CATALINA_HOME/bin
                 EXPOSE 8080
